GH-3814: Upgrade Apache Kafka client dependencies to version 4.0.0
Fixes: #3814

Issue link: https://github.com/spring-projects/spring-kafka/issues/3814

This commit upgrades the Apache Kafka client to 4.0.0 with the following changes:

- Upgrade Kafka client dependencies to 4.0.0 in build.gradle
- Remove ZooKeeper-based broker implementation as Kafka 4.0 fully transitions to KRaft mode
  - Delete EmbeddedKafkaZKBroker class and related tests
  - Remove ZooKeeper dependency
  - Refactor EmbeddedKafkaRule to use KRaft exclusively
  - Update KafkaClusterTestKit imports to use new packages

- Update ConsumerRecords constructor calls to include the new required Map parameter
- Add implementations for new Producer interface methods:
  - registerMetricForSubscription
  - unregisterMetricFromSubscription

- Update KafkaStreamBrancher to use new split() and branch() methods
- Remove deprecated partitioner classes from runtime hints
- Remove deprecated sendOffsetsToTransaction method that used String consumerGroupId
- Update BrokerAddress to use org.apache.kafka.server.network.BrokerEndPoint
- Update DeserializationExceptionHandler to use new ErrorHandlerContext

The commit also includes test modifications to address limitations with static port assignments in KRaft mode
and adjustments to replication factors in tests.

Signed-off-by: Soby Chacko <soby.chacko@broadcom.com>